[package]
name = "product-service"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.63"
mongodb = "3.0.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
tonic = "0.12.1"
prost = "0.13.1"
error-stack = "0.5.0"
log = "0.4.22"
tonic-reflection = "0.12.1"
bigdecimal = "0.4.5"

[build-dependencies]
tonic-build = "0.12.1"

[profile.release]
opt-level = 3  # Optimization level (0-3)
lto = true     # Enable Link Time Optimization
codegen-units = 1  # Further optimize binary size by setting codegen units to 1